--- a/src/@core/scss/base/components/demo.scss
+++ b/src/@core/scss/base/components/demo.scss
@@ -14,8 +14,9 @@
   justify-content: flex-start;
   align-items: center;
   & > * {
-    margin-right: 1.5rem;
+    margin-right:1rem;
     margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
   }
 }
 
