--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,8 @@
 @import '../node_modules/prismjs/themes/prism-tomorrow';
 @import './assets/scss/app.scss';
+
+.notes-card{
+    margin-left: 20px;
+    
+
+}
