--- a/src/views/booking/BoardBookings/BoardCard/BoardCard.scss
+++ b/src/views/booking/BoardBookings/BoardCard/BoardCard.scss
@@ -20,6 +20,13 @@
     justify-content: flex-end;
     padding: 5px 0rem;
   }
+  .btn-copy{
+    margin: 0;
+    padding: 0;
+    z-index: 1;
+
+    
+  }
 
 }
 
