--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,6 @@
-@import '../node_modules/prismjs/themes/prism-tomorrow';
-@import './assets/scss/app.scss';
+@import "../node_modules/prismjs/themes/prism-tomorrow";
+@import "./assets/scss/app.scss";
 
-.notes-card{
+.notes-card {
     margin-left: 20px;
-    
-
 }
