--- a/src/views/booking/TableBookings/TableBookings.scss
+++ b/src/views/booking/TableBookings/TableBookings.scss
@@ -30,7 +30,7 @@
   .rdt_TableBody {
     .rdt_TableRow {
       .rdt_TableCell {
-        height: 53px;
+        height: auto;
         padding: 0.72rem 1.5rem;
 
         .column-action {
