--- a/src/@core/scss/base/plugins/forms/form-wizard.scss
+++ b/src/@core/scss/base/plugins/forms/form-wizard.scss
@@ -2,12 +2,12 @@
 @import '../../components/include'; // Components includes
 
 $header-padding-y: 1.5rem;
-$header-padding-x: 1.5rem;
+$header-padding-x: 0;
 $content-padding-x: 1.5rem;
 $content-padding-y: 1.5rem;
 $trigger-padding-vertical: 1rem;
-$step-box-height: 38px;
-$step-box-width: 38px;
+$step-box-height: 28px;
+$step-box-width: 28px;
 
 .bs-stepper {
   background-color: $white;
@@ -30,7 +30,7 @@ $step-box-width: 38px;
     }
     .step {
       .step-trigger {
-        padding: 0 1.75rem;
+        padding: 0 1.5rem;
         flex-wrap: nowrap;
         font-weight: normal;
         .bs-stepper-box {
@@ -51,6 +51,7 @@ $step-box-width: 38px;
           margin: 0;
           margin-top: 0.5rem;
           margin-left: 1rem;
+          font-size: 0.80rem;
 
           .bs-stepper-title {
             display: inherit;
@@ -62,7 +63,7 @@ $step-box-width: 38px;
 
           .bs-stepper-subtitle {
             font-weight: 400;
-            font-size: 0.85rem;
+            font-size: 0.80rem;
             color: $text-muted;
           }
         }
