--- a/src/@core/scss/base/plugins/forms/form-wizard.scss
+++ b/src/@core/scss/base/plugins/forms/form-wizard.scss
@@ -34,6 +34,7 @@ $step-box-width: 28px;
         flex-wrap: nowrap;
         font-weight: normal;
         .bs-stepper-box {
+          margin-top: 5px;
           display: flex;
           align-items: center;
           justify-content: center;
