--- a/src/@core/scss/base/plugins/forms/form-wizard.scss
+++ b/src/@core/scss/base/plugins/forms/form-wizard.scss
@@ -2,7 +2,6 @@
 @import '../../components/include'; // Components includes
 
 $header-padding-y: 1.5rem;
-$header-padding-x: 0;
 $content-padding-x: 1.5rem;
 $content-padding-y: 1.5rem;
 $trigger-padding-vertical: 1rem;
@@ -15,7 +14,7 @@ $step-box-width: 28px;
   border-radius: 0.5rem;
 
   .bs-stepper-header {
-    padding: $header-padding-y $header-padding-x;
+    padding: 0 0 $header-padding-y;
     flex-wrap: wrap;
     border-bottom: 1px solid rgba($black, 0.08);
     margin: 0;
