--- a/src/views/calendar/calendar.scss
+++ b/src/views/calendar/calendar.scss
@@ -4,7 +4,7 @@
 .calendar {
     background-color: white;
     max-width:1200px;
-    margin: 40px auto;
+    // margin: 40px auto;
     padding: 10px;
     font-weight: normal;
 
