Fixing right and left margins

--- a/src/views/calendar/calendar.scss
+++ b/src/views/calendar/calendar.scss
@@ -4,7 +4,7 @@
 .calendar {
     background-color: white;
     max-width:1200px;
-    // margin: 40px auto;
+    margin: 0 25px 0 25px;
     padding: 10px;
     font-weight: normal;
 
