--- a/src/views/calendar/calendar.scss
+++ b/src/views/calendar/calendar.scss
@@ -3,7 +3,8 @@
 
 .calendar {
     background-color: white;
-    max-width:1200px;
+    //max-width:1200px;
+    width: 100%;
     margin: 0 25px 0 25px;
     padding: 10px;
     font-weight: normal;
