First chat twilio ops portal version

--- a/src/@core/scss/base/themes/dark-layout.scss
+++ b/src/@core/scss/base/themes/dark-layout.scss
@@ -1771,6 +1771,7 @@
         }
         .start-chat-area,
         .user-chats {
+          background-image: url($chat-bg-dark);
           background-color: #1e232f;
         }
         .user-chats {
