--- a/src/@core/scss/base/pages/app-chat.scss
+++ b/src/@core/scss/base/pages/app-chat.scss
@@ -128,6 +128,33 @@ $chat-profile-sidebar-head-height: 200px;
         }
       }
     }
+
+    .chat-fixed-title {
+      width: $chat-sidebar-width;
+      border-bottom: 1px solid $border-color;
+      text-align: center;
+      height: 50px;
+      .sidebar-profile-toggle {
+        .avatar {
+          display: inline-table;
+        }
+      }
+      .input-group {
+        &:focus-within {
+          background-color: transparent;
+          box-shadow: none;
+        }
+      }
+      h4 {
+        align-items: center;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        color: 'black';
+        line-height: 50px;
+      }
+    }
     .chat-list-title {
       color: $primary;
       margin: 2rem 1.286rem 0.5rem;
@@ -213,15 +240,11 @@ $chat-profile-sidebar-head-height: 200px;
   // User chat window css
   .chat-app-window {
     height: 100%;
-    width: calc(100% - #{$chat-sidebar-width} - 30px);
-
-    @media screen and (max-width: 2500px) {
-      width: calc(98% - #{$chat-sidebar-width + 8px});
-    }
 
     // Before starting chat
     .start-chat-area,
     .user-chats {
+      background-image: url($chat-bg-light);
       background-color: $chat-image-back-color;
       background-repeat: repeat;
       background-size: 210px;
