--- a/src/views/booking/steps/BookingCheckoutSummary.module.scss
+++ b/src/views/booking/steps/BookingCheckoutSummary.module.scss
@@ -4,9 +4,20 @@
   height: 100%;
   justify-content: center;
   width: 111%;
+  border-left: 1px solid #ebe9f1;
 }
 
 .subContainer {
   height: 100%;
   box-shadow: none !important;
+}
+
+.changeSpaceCard {
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  height: 20%;
+  margin-top: 35px;
+  padding: 0px 20px;
+  width: 100%;
 }
