--- a/src/@core/scss/base/pages/app-chat.scss
+++ b/src/@core/scss/base/pages/app-chat.scss
@@ -38,7 +38,7 @@ $chat-profile-sidebar-head-height: 200px;
     background-color: $white;
     transform: translateX(-110%);
     transition: all 0.3s ease, background 0s, border 0s, color 0s;
-    z-index: 6;
+    z-index: 6 !important;
     &.show {
       transform: translateX(0);
       transition: all 0.3s ease, background 0s, border 0s, color 0s;
