New dark styles

--- a/src/views/chat/MessageActions.scss
+++ b/src/views/chat/MessageActions.scss
@@ -7,6 +7,12 @@
   width: 100% !important;
 }
 
+.message-text {
+  margin-left: 5px;
+  font-weight: normal;
+}
+
 .delete-message {
   color: red;
+  margin-left: 5px;
 }
