--- a/src/views/chat/MessageView.scss
+++ b/src/views/chat/MessageView.scss
@@ -95,3 +95,10 @@
   font-size: 0.75rem;
   padding-top: 0.5rem;
 }
+
+.dark-layout {
+  .message-author {
+    background-color: #283046;
+    color: #b4b7bd;
+  }
+}
