improvements to handle sms conversations

--- a/src/views/chat/RenderList.scss
+++ b/src/views/chat/RenderList.scss
@@ -32,10 +32,10 @@
 }
 
 .list-group-item-active {
-  background-color: aliceblue !important;
+  background-color: #F5F5F5 !important;
   color: #82868b !important;
   &:focus {
-    background-color: aliceblue !important;
+    background-color: #F5F5F5 !important;
     color: #82868b !important;
   }
   small {
