Adding option to remove files, adding condition to upload just one file per payment

--- a/src/@core/components/drop-zone/drop-zone.scss
+++ b/src/@core/components/drop-zone/drop-zone.scss
@@ -1,3 +1,9 @@
 .modal-footer {
   justify-content: center !important;
 }
+
+.file-remove-icon{
+  width: 12px;
+  margin-bottom: 2px;
+  font-weight: bold;
+}
