Making list apper in front of cap registration swtich

--- a/src/components/EditBookingModal.scss
+++ b/src/components/EditBookingModal.scss
@@ -9,3 +9,19 @@
 .input-field-select {
     min-height: 60px;
 }
+
+.edit-booking-select-coordinator {
+    z-index: 100;
+}
+
+.edit-booking-select-class{
+    z-index: 90;
+}
+
+.edit-booking-select-variant{
+    z-index: 80;
+}
+
+.edit-booking-select-size {
+    z-index: 70;
+}
