--- a/src/components/EditBookingModal.scss
+++ b/src/components/EditBookingModal.scss
@@ -10,6 +10,10 @@
     min-height: 60px;
 }
 
+.edit-booking-select-instructor {
+    z-index: 110;
+}
+
 .edit-booking-select-coordinator {
     z-index: 100;
 }
