Adding pre event survey link to ops portal

--- a/src/components/EditBookingModal.scss
+++ b/src/components/EditBookingModal.scss
@@ -30,6 +30,11 @@
     z-index: 70;
 }
 
+.pre-event-small-note{
+    font-size: 11px;
+    font-style: italic;
+}
+
 /* Example Styles for React Tags*/
 span.tags {
     border: 1px solid #ddd;
