--- a/src/@core/scss/base/bootstrap-extended/_include.scss
+++ b/src/@core/scss/base/bootstrap-extended/_include.scss
@@ -15,7 +15,7 @@
 @import 'functions'; // Bootstrap extended function
 
 // Variables
-@import 'scss/variables/variables'; // Bootstrap custom variable override (for user purpose)
+@import '../../../../assets/scss/variables/variables'; // Bootstrap custom variable override (for user purpose)
 @import 'variables'; // Bootstrap extended variable override
 @import 'bootstrap/scss/variables'; // Bootstrap core variable
 
