--- a/src/components/organisms/chat/MessageInputField.scss
+++ b/src/components/organisms/chat/MessageInputField.scss
@@ -16,7 +16,7 @@
 }
 
 .input-field {
-  align-items: start;
+  align-items: flex-start;
   cursor: pointer;
   display: flex;
   position: relative;
