Adding all input fields to add al the information to the signup page settings attribute

--- a/src/components/molecules/sign-up-settings/styles.scss
+++ b/src/components/molecules/sign-up-settings/styles.scss
@@ -2,8 +2,11 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 15px;
+  row-gap: 10px;
+
+  .additional-fields-list-items {
+    width: 210%;
+    margin-top: 15px;
+  }
 }
 
-.additional-fields-list-items {
-  display: block;
-}
